# soccerbars

./: .Rbuildignore  .gitignore  CHANGELOG.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  pyproject.toml
.github/workflows/: Python-package.yaml  R-CMD-check.yaml  R-lint.yaml  lint.yaml  python-package.yml
R/: core.R
inst/: WORDLIST
man/: plot_scores.Rd  scorebar.Rd  soccerbar.Rd
scorebars/: __init__.py  __main__.py  core.py
soccerbars/: __init__.py  __main__.py  core.py
tests/: spelling.R  testthat.R
tests/python/: test_core.py
tests/testthat/: test-core.R
