[tool.poetry]
name = "scorebars"
version = "0.1.0"
description = "Multivariate sparklines making use of Gestalt theory (gestaltlines) for sequences of sports results."
authors = ["M. Eren Akbiyik <erenakbiyik@gmail.com>"]
license = "MIT"
exclude = ["R/",".vscode/","DESCRIPTION","NAMESPACE","tests/R","man/",".Rbuildignore"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.3.3"
numpy = "1.19.3"
click = "^7.1.2"
colorama = "^0.4.4"
click-help-colors = "^0.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
data-science-types = "^0.2.20"
ipykernel = "^5.3.4"
pytest = "^6.1.2"

[tool.poetry.scripts]
scorebars = "scorebars.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
