[tool.poetry]
name = "scorebars"
version = "0.1.0"
description = "Multivariate sparklines making use of Gestalt theory (gestaltlines) for sequences of sports results."
authors = ["M. Eren Akbiyik <erenakbiyik@gmail.com>"]
license = "MIT"
exclude = ["R/",".vscode/",".gitignore","DESCRIPTION","NAMESPACE","tests/testthat/","tests/testthat.R","man/","inst/",".Rbuildignore"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.3"
numpy = "1.19.3"
click = { version = "^7.1.2", optional = true }
colorama = { version = "^0.4.4", optional = true }
click-help-colors = { version = "^0.8", optional = true }
pandas = { version = "^1.1.5", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
data-science-types = "^0.2.20"
ipykernel = "^5.3.4"
pytest = "^6.1.2"
coverage = "^5.3.1"
mock = "^4.0.3"

[tool.poetry.extras]
cli = ["click", "colorama", "click-help-colors", "pandas"]

[tool.poetry.scripts]
scorebars = "scorebars.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
